prevent horizontal scrolling in popovers

--- a/resources/less/gui.less
+++ b/resources/less/gui.less
@@ -113,6 +113,10 @@
         margin-bottom: 5px;
         font-family: @font-family-sans-serif;
     }
+    .preview {
+        // to prevent horizontal scrolling in popovers
+        white-space: normal;
+    }
 }
 
 /* This class toggles the popovers for previews */
